# ComputerSecurityHA

./: README.md
Backend/: Backend.csproj  Backend.sln  Program.cs  appsettings.json  package-lock.json
Backend/Controllers/: AuthController.cs  CaffsController.cs  CommentsController.cs  TestController.cs  UsersController.cs
Backend/Properties/: launchSettings.json
Backend/Services/: FileManager.cs  Mapper.cs
Backend/wwwroot/: 3rdpartylicenses.txt  main.13684d6f1e1d4d5d.js
BackendTest/: AuthTests.cs  BackendTest.csproj  CaffsTests.cs  CommentsTests.cs  InMemoryDbFactory.cs  Startup.cs  UsersTests.cs  Utility.cs
BackendTest/Resources/: bad.caff
DAL/: CaffContext.cs  DAL.csproj
Documents/: Tervezés.docx  Tesztelési terv.docx  component.drawio  security.drawio  system.drawio  systemAndEnvironment.drawio
Documents/Backend/: swagger OpenAPI.json  swagger.html
Documents/Sequence diagrams/: CommentFinal.drawio  DeleteFilesFinal.drawio  DeleteUserDataFinal.drawio  Modify.drawio  Purchase, search.drawio  SignIn_SignUp_Preview.drawio  Upload.drawio
Frontend/: Frontend.esproj  angular.json  package-lock.json  package.json
Frontend/src/: proxy.conf.js
Frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  (+2 more)
Models/: Archivable.cs  CAFF.cs  CaffDTO.cs  Comment.cs  CommentDTO.cs  LoginDTO.cs  NewCommentDTO.cs  RegisterDTO.cs  User.cs  UserDTO.cs
Parser/: CMakeLists.txt  README.md  main.cpp
Parser/include/parser/: CAFF.hpp  CIFF.hpp  Color.hpp
Parser/lib/gif-h/: README.md  gif.h
Parser/src/parser/: CAFF.cpp  CIFF.cpp
(+25 files in other folders)
